Add hw3/prob2/unary negation

--- a/hw3/prob2/test/Makefile
+++ b/hw3/prob2/test/Makefile
@@ -3,13 +3,13 @@ LIBS = -lm -lcomplex
 INCLUDE_DIRS = -I..
 LIBDIRS = -L..
 
-SOURCES = 1.cc 2.cc 3.cc 4.cc 5.cc
+SOURCES = 1.cc 2.cc 3.cc 4.cc 5.cc 6.cc
 TARGETS = $(SOURCES:%.cc=%.x)
 
 all: $(TARGETS)
 
 %.x: %.cc ../libcomplex.a
-	$(CXX)  $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@ -g
+	$(CXX)  $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
 
 test: $(TARGETS)
 	./test.sh
