--- a/hw3/prob3/test/Makefile
+++ b/hw3/prob3/test/Makefile
@@ -1,14 +1,15 @@
 CXX = g++ -std=c++11
-LIBS = -lm
-INCLUDE_DIRS = -I..
+LIBS = -lm -lfraction -lcomplex
+INCLUDE_DIRS = -I.. -I../../prob1/ -I../../prob2/
+LIBDIRS = -L..
 
-SOURCES = 1.cc 2.cc 3.cc
+SOURCES = 1.cc 2.cc 3.cc 4.cc 5.cc
 TARGETS = $(SOURCES:%.cc=%.x)
 
 all: $(TARGETS)
 
-%.x: %.cc ../*.hh
-	$(CXX) $(LIBS) $(INCLUDE_DIRS) $< -o $@
+%.x: %.cc ../*.hh ../libfraction.a ../libcomplex.a
+	$(CXX)  $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
 
 test: $(TARGETS)
 	./test.sh
