--- a/hw3/prob3/test/Makefile
+++ b/hw3/prob3/test/Makefile
@@ -1,6 +1,6 @@
 CXX = g++ -std=c++11
 LIBS = -lm -lfraction -lcomplex -lDFT
-INCLUDE_DIRS = -I.. -I../../prob1/ -I../../prob2/
+INCLUDE_DIRS = -I.. 
 LIBDIRS = -L..
 
 P3_SOURCES = P3_double.cc P3_int.cc P3_bool.cc P3_fraction.cc P3_complex.cc
@@ -17,7 +17,7 @@ P4: $(P4_TARGETS)
 %.x: %.cc ../*.hh ../libfraction.a ../libcomplex.a ../libDFT.a
 	$(CXX)  $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
 
-test: $(TARGETS)
+test: $(P3_TARGETS) $(P4_TARGETS)
 	./test.sh
 
 clean:
