Add hw3/prob4/inverse_matrix() method and unit test

--- a/hw3/prob3/test/Makefile
+++ b/hw3/prob3/test/Makefile
@@ -4,7 +4,7 @@ INCLUDE_DIRS = -I..
 LIBDIRS = -L..
 
 P3_SOURCES = P3_double.cc P3_int.cc P3_bool.cc P3_fraction.cc P3_complex.cc
-P4_SOURCES = P4_1.cc P4_2.cc P4_3.cc
+P4_SOURCES = P4_1.cc P4_2.cc P4_3.cc P4_4.cc
 P3_TARGETS = $(P3_SOURCES:%.cc=%.x)
 P4_TARGETS = $(P4_SOURCES:%.cc=%.x)
 
