Add hw3/prob4/ unitary matrix unit test

--- a/hw3/prob3/Makefile
+++ b/hw3/prob3/Makefile
@@ -27,16 +27,16 @@ P4: $(HEADERS) $(LIB_FRACTION) $(LIB_COMPLEX) $(LIB_DFT)
 	make P4 -C test
 
 $(LIB_FRACTION): $(FRACTION_OBJECTS) $(FRACTION_HEADERS)
-	ar cr $(LIB_FRACTION) fraction.o fraction_operations.o
+	ar cr $(LIB_FRACTION) $(FRACTION_OBJECTS)
 
 $(LIB_COMPLEX): $(COMPLEX_OBJECTS) $(COMPLEX_HEADERS)
-	ar cr $(LIB_COMPLEX) complex.o complex_operations.o
+	ar cr $(LIB_COMPLEX) $(COMPLEX_OBJECTS)
 
-$(LIB_DFT): $(DFT_OBJECTS) $(DFT_HEADERS)
-	ar cr $(LIB_DFT) DFT.o complex.o complex_operations.o
+$(LIB_DFT): $(DFT_OBJECTS) $(COMPLEX_OBJECTS) $(DFT_HEADERS)
+	ar cr $(LIB_DFT) $(DFT_OBJECTS) $(COMPLEX_OBJECTS)
 
 %.o: %.cc $(HEADERS) $(FRACTION_HEADERS) $(COMPLEX_HEADERS) $(DFT_HEADERS)
-	$(CXX) -c $<
+	$(CXX) -c $< -g
 
 clean:
 	rm -f $(FRACTION_OBJECTS) $(LIB_FRACTION) $(COMPLEX_OBJECTS) $(LIB_COMPLEX) $(DFT_OBJECTS) $(LIB_DFT)
