--- a/hw3/prob3/Makefile
+++ b/hw3/prob3/Makefile
@@ -36,7 +36,7 @@ $(LIB_DFT): $(DFT_OBJECTS) $(COMPLEX_OBJECTS) $(DFT_HEADERS)
 	ar cr $(LIB_DFT) $(DFT_OBJECTS) $(COMPLEX_OBJECTS)
 
 %.o: %.cc $(HEADERS) $(FRACTION_HEADERS) $(COMPLEX_HEADERS) $(DFT_HEADERS)
-	$(CXX) -c $< -g
+	$(CXX) -c $<
 
 clean:
 	rm -f $(FRACTION_OBJECTS) $(LIB_FRACTION) $(COMPLEX_OBJECTS) $(LIB_COMPLEX) $(DFT_OBJECTS) $(LIB_DFT)
