--- a/hw4/test/Makefile
+++ b/hw4/test/Makefile
@@ -1,4 +1,4 @@
-CXX = g++ -std=c++11 -Wall
+CXX = g++ -O0 -std=c++11 -Wall
 LIBS = -ljson
 INCLUDE_DIRS = -I..
 LIBDIRS = -L..
@@ -9,10 +9,13 @@ TARGETS = $(SOURCES:%.cc=%.x)
 all: $(TARGETS)
 
 %.x: %.cc ../libjson.a
-	$(CXX) $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
+	$(CXX) $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@ -g
 
 test: $(TARGETS)
 	./test.sh
+
+memtest1: $(TARGETS)
+	valgrind --leak-check=yes ./1.x
 
 clean:
 	rm -rf $(TARGETS)
