Add hw4 unit test with example JSON data

--- a/hw4/Makefile
+++ b/hw4/Makefile
@@ -1,4 +1,4 @@
-CXX = g++ -std=c++11 -O0 -Wall
+CXX = g++ -std=c++11 -Wall
 
 SOURCES = object.cc number.cc array.cc hash.cc string.cc boolean.cc
 HEADERS = json.hh object.hh number.hh array.hh hash.hh string.hh boolean.hh
@@ -14,7 +14,7 @@ $(LIB_JSON): $(OBJECTS) $(HEADERS)
 	ar cr $(LIB_JSON) $(OBJECTS)
 
 %.o: %.cc $(HEADERS)
-	$(CXX) -c $< -g
+	$(CXX) -c $<
 
 clean:
 	rm -f $(OBJECTS) $(LIB_JSON)
