--- a/hw5/test/Makefile
+++ b/hw5/test/Makefile
@@ -3,13 +3,13 @@ LIBS = -ljson
 INCLUDE_DIRS = -I..
 LIBDIRS = -L..
 
-SOURCES = 1.cc 2.cc 3.cc 4.cc 5.cc
+SOURCES = 1.cc
 TARGETS = $(SOURCES:%.cc=%.x)
 
 all: $(TARGETS)
 
 %.x: %.cc ../libjson.a
-	$(CXX) $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
+	$(CXX) $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@ -g
 
 test: $(TARGETS)
 	./test.sh
